docs/api/qiskit/0.43/qiskit.opflow.expectations.ExpectationBase.mdx
---
title: ExpectationBase (v0.43)
description: API reference for qiskit.opflow.expectations.ExpectationBase in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.expectations.ExpectationBase
---

# ExpectationBase

<Class id="qiskit.opflow.expectations.ExpectationBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/expectations/expectation_base.py" signature="ExpectationBase" modifiers="class">
  Bases: [`ConverterBase`](qiskit.opflow.converters.ConverterBase "qiskit.opflow.converters.converter_base.ConverterBase")

  Deprecated: A base for Expectation value converters. Expectations are converters which enable the computation of the expectation value of an Observable with respect to some state function. They traverse an Operator tree, replacing OperatorStateFn measurements with equivalent measurements which are more amenable to computation on quantum or classical hardware. For example, if one would like to measure the expectation value of an Operator `o` expressed as a sum of Paulis with respect to some state function, but only has access to diagonal measurements on Quantum hardware, we can create a measurement \~StateFn(o), use a `PauliExpectation` to convert it to a diagonal measurement and circuit pre-rotations to a append to the state, and sample this circuit on Quantum hardware with a CircuitSampler. All in all, this would be: `my_sampler.convert(my_expect.convert(~StateFn(o)) @ my_state).eval()`.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.expectations.expectation_base.ExpectationBase` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  ## Methods Defined Here

  <span id="qiskit-opflow-expectations-expectationbase-compute-variance" />

  ### compute\_variance

  <Function id="qiskit.opflow.expectations.ExpectationBase.compute_variance" signature="ExpectationBase.compute_variance(exp_op)" modifiers="abstract">
    Compute the variance of the expectation estimator.

    **Parameters**

    **exp\_op** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The full expectation value Operator after sampling.

    **Returns**

    The variances or lists thereof (if exp\_op contains ListOps) of the expectation value estimation.

    **Return type**

    list | complex | [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")
  </Function>

  <span id="qiskit-opflow-expectations-expectationbase-convert" />

  ### convert

  <Function id="qiskit.opflow.expectations.ExpectationBase.convert" signature="ExpectationBase.convert(operator)" modifiers="abstract">
    Accept an Operator and return a new Operator with the measurements replaced by alternate methods to compute the expectation value.

    **Parameters**

    **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The operator to convert.

    **Returns**

    The converted operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>
</Class>

